k8s/apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 10%
  selector:
    matchLabels:
      app.kubernetes.io/name: zygarde
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zygarde
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: charmingruby/cell:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
