k8s/apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cell-api-svc
spec:
  type: ClusterIP
  selector:
    app: cell
    kind: api
  ports:
    - port: 80
      targetPort: 4000
